--- a/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_header.html
+++ b/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_header.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <container>
 	<row class="wht-header gutter full-width mbl-pad-md">
 		<column class="padding-b-small padding-t-large">
@@ -28,7 +28,7 @@
 	</row>
 	<row>
 		<column class="dis-none-large pop-out mbl-pad-md">
-			<a href="https://www.vacasa.com{{{ utms }}}">
+			<a href="https://www.vacasa.com">
 				{{#compare RESERVATION_CHANNEL "==" "Booking.com"}}<span style="color: rgb(112, 117, 121); font-size: 18px;font-family: 'Helvetica Neue' , Helvetica, Arial,
 					sans-serif;">booked&nbsp;with&nbsp;</span><img style="vertical-align:-4px;" inline infer="retina"
 						src="https://vacasa-email.imgix.net/partner-logo-booking.com.png?h=40&fit=crop" alt="Vacasa" />
@@ -49,4 +49,4 @@
 		</column>
 	</row>
 </container>
-<!-- /raw-helper -->
+<!-- {{{{/raw-helper}}}} -->
