--- a/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_reservation-add-info.html
+++ b/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_reservation-add-info.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <container class="add-info">
 	<row>
 		<column class="padding-b-large text-gutter text-left mbl-pad-md">
@@ -67,4 +67,4 @@
 		</column>
 	</row>
 </container>
-<!-- /raw-helper -->
+<!-- {{{{/raw-helper}}}} -->
