--- a/Transactionals/5-Check-in/src/partials/t_quick_reservation_info_pane.html
+++ b/Transactionals/5-Check-in/src/partials/t_quick_reservation_info_pane.html
@@ -13,6 +13,7 @@
 	<row style="background: #f8f9f9;" class="res-info-pane top-row">
 		<column style="background: #f8f9f9;" large="2" small="0"
 			class="left-panel-item dis-none-cell-sm padding-t padding-b"><a href="{{{ TRIP_PORTAL_URL }}}"><img infer="retina"
+					width="84"
 					src="https://vacasa-units.imgix.net/{{{ UNIT_PRIMARY_IMAGE_ID }}}.jpg?w=168&mask=corners&corner-radius=10,10,10,10&ar=1:1&fit=crop&crop=entropy,edges"
 					alt="Your Vacasa home image"></a>
 		</column>
