--- a/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_lead.html
+++ b/Transactionals/1.1-Reservation_Confirmation_Channel/src/partials/t_lead.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <container class="lead">
 	<row>
 		<column class="text-left gutter padding-b padding-t-xtra-large mbl-pad-sm">
@@ -25,4 +25,4 @@
 		</column>
 	</row>
 </container>
-<!-- /raw-helper -->
+<!-- {{{{/raw-helper}}}} -->
