--- a/Transactionals/2-Reservation_Reminder/src/partials/t_quick_reservation_info_pane.html
+++ b/Transactionals/2-Reservation_Reminder/src/partials/t_quick_reservation_info_pane.html
@@ -1,4 +1,4 @@
-<!-- raw-helper -->
+<!-- {{{{raw-helper}}}} -->
 <container class="res-info-pane pop-out" style="background: #ffffff;">
 	<row style="background: #f8f9f9;" class="text-center">
 		<column style="background: #f8f9f9;" large="0" small="12" class="padding-t mbl-img-row mbl-pad-md">
@@ -112,4 +112,4 @@
 		</column>
 	</row>
 </container>
-<!-- /raw-helper -->
+<!-- {{{{/raw-helper}}}} -->
